feat: integrate core logic framework
Pending items:
1. Fix frontend card rendering bug
2. Implement backend database persistence
3. Provide additional agent strategies (parallel agents)
4. For functionCalling, replace toolName with toolId. System tools use id param; MCP tools convert names to id via translation method.

未完成点：
1. 前端 card 渲染 bug
2. 后端进行 DB 持久化
3. 其他 agent 策略提供（并行agent）
4. functionCalling调用时，将toolName调用改成 toolId调用，系统工具使用原生Id，mcp 工具使用转换方法将id 通过name转换获得